--- a/src/Canducci.MongoDB.Repository/project.json
+++ b/src/Canducci.MongoDB.Repository/project.json
@@ -1,8 +1,16 @@
-﻿{
-  "version": "1.0.0-*",
+{
+  "version": "1.0.1-*",
 
   "dependencies": {
-    "NETStandard.Library": "1.6.0"
+    "MongoDB.Bson": "2.4.2",
+    "MongoDB.Driver": "2.4.2",
+    "MongoDB.Driver.Core": "2.4.2",
+    "NETStandard.Library": "1.6.1",
+    "System.Runtime": "4.3.0",
+    "Microsoft.CSharp": "4.3.0",
+    "System.Collections": "4.3.0",
+    "System.Linq": "4.3.0",    
+    "System.Threading": "4.3.0"
   },
 
   "frameworks": {
