--- a/src/Canducci.MongoDB.Cls/project.json
+++ b/src/Canducci.MongoDB.Cls/project.json
@@ -5,14 +5,18 @@
   },
 
   "dependencies": {
+    "Canducci.MongoDB.Repository": "1.0.1-*",
     "Microsoft.NETCore.App": {
       "version": "1.1.0",
       "type": "platform"
     },
+    "Microsoft.NETCore.Runtime.CoreCLR": "1.1.0",
     "MongoDB.Bson": "2.4.2",
     "MongoDB.Driver": "2.4.2",
     "MongoDB.Driver.Core": "2.4.2",
-     "Canducci.MongoDB.Repository": "1.0.1-*"
+    "System.Reflection": "4.3.0",
+    "System.Reflection.Emit.Lightweight": "4.3.0",
+    "System.Reflection.TypeExtensions": "4.3.0"
   },
 
   "frameworks": {
