--- a/src/Canducci.MongoDB.Cls/project.json
+++ b/src/Canducci.MongoDB.Cls/project.json
@@ -13,10 +13,7 @@
     "Microsoft.NETCore.Runtime.CoreCLR": "1.1.0",
     "MongoDB.Bson": "2.4.2",
     "MongoDB.Driver": "2.4.2",
-    "MongoDB.Driver.Core": "2.4.2",
-    "System.Reflection": "4.3.0",
-    "System.Reflection.Emit.Lightweight": "4.3.0",
-    "System.Reflection.TypeExtensions": "4.3.0"
+    "MongoDB.Driver.Core": "2.4.2"
   },
 
   "frameworks": {
