--- a/src/Canducci.MongoDB.Repository/project.json
+++ b/src/Canducci.MongoDB.Repository/project.json
@@ -1,20 +1,11 @@
 {
-  "version": "1.0.1-*",
-
-  "dependencies": {
-    "Microsoft.CSharp": "4.3.0",
+  "version": "1.0.1-*", 
+  "dependencies": {    
     "Microsoft.NETCore.Runtime.CoreCLR": "1.1.0",
     "MongoDB.Bson": "2.4.2",
     "MongoDB.Driver": "2.4.2",
-    "MongoDB.Driver.Core": "2.4.2",
-    "NETStandard.Library": "1.6.1",
-    "System.Collections": "4.3.0",
-    "System.Linq": "4.3.0",
-    "System.Reflection": "4.3.0",
-    "System.Runtime": "4.3.0",
-    "System.Threading": "4.3.0"
-  },
-
+    "MongoDB.Driver.Core": "2.4.2"
+  },                    
   "frameworks": {
     "netstandard1.6": {
       "imports": "dnxcore50"
