--- a/src/Canducci.MongoDB.Repository/project.json
+++ b/src/Canducci.MongoDB.Repository/project.json
@@ -1,7 +1,8 @@
 {
-  "version": "1.0.1-*", 
-  "dependencies": {    
+  "version": "1.0.1-*",
+  "dependencies": {
     "Microsoft.NETCore.Runtime.CoreCLR": "1.1.0",
+    "Microsoft.Extensions.Configuration": "1.1.0",
     "MongoDB.Bson": "2.4.2",
     "MongoDB.Driver": "2.4.2",
     "MongoDB.Driver.Core": "2.4.2"
